SF Primes/src/objects/Trip_Report__c.object
<CustomObject>
    <description>Object used for recording information about the onsite install, primarily filled out by the BSC associates</description>
    <fields>
        <fullName>Agenda_Signed_Off_Complete__c</fullName>
        <description>field use to indicate the percent complete for the deliverable</description>
        <inlineHelpText>Please enter the percent complete for the deliverable</inlineHelpText>
        <label>Agenda Signed Off - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agenda_Signed_Off_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Agenda Signed Off - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrival_Start_Date_Time__c</fullName>
        <description>Field to indicate when the associate arrived to begin the onsite portion of the install</description>
        <inlineHelpText>Please enter the day/time that you arrived at the dealership</inlineHelpText>
        <label>Arrival (Start) Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associate_s_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_s_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <description>The title for the associate filling out the record</description>
        <inlineHelpText>Default value will be the logged in associated.  You can manually change  the field is required.</inlineHelpText>
        <label>Associate&apos;s Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_SubProjectSite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship field to designate the site for the Trip Report</description>
        <inlineHelpText>If you launch the &quot;new&quot; from the site this field will be auto-updated with the related Site.  You can also choose a different site or replace if the relationship was wrong.</inlineHelpText>
        <label>Associated SubProjectSite</label>
        <referenceTo>SubProjectSite__c</referenceTo>
        <relationshipLabel>Trip Reports</relationshipLabel>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Full_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSC Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDK_Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person that requested this dealership visit</description>
        <inlineHelpText>Please enter the name of the person who requested the dealership visit</inlineHelpText>
        <label>CDK Requester Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <formula>IF(ISBLANK( Associated_SubProjectSite__r.CMF_Name__c),( Related_Account__r.ShippingCity &amp; &quot;, &quot; &amp;  Related_Account__r.ShippingPostalCode),(Associated_SubProjectSite__r.City__c &amp; &quot;, &quot; &amp;   Associated_SubProjectSite__r.State_Province__c))</formula>
        <label>City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Manager_for_the_SubProject__c</fullName>
        <formula>Associated_SubProjectSite__r.SubProject__r.Training_Implementation_Client_Mgr__r.FirstName &amp; &quot; &quot; &amp;  Associated_SubProjectSite__r.SubProject__r.Training_Implementation_Client_Mgr__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Manager for the SubProject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_with_Purpose_of_Visit__c</fullName>
        <description>Field to indicate the progress of the site visit</description>
        <inlineHelpText>Please select the appropriate percent complete for the purpose of your visit</inlineHelpText>
        <label>% Complete with Purpose of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Verified_Risk__c</fullName>
        <description>Field to indicate if the deliverable is at risk</description>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Conversion Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Verified__c</fullName>
        <description>Field to indicate the progress towards completion</description>
        <inlineHelpText>Please select the appropriate percent complete for this deliverable</inlineHelpText>
        <label>Conversion Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCS_3rd_Party_Comm_Verified_Complete__c</fullName>
        <description>field used to indicate the progress complete for the deliverable</description>
        <inlineHelpText>Please select the proper value to indicate your progress toward completion</inlineHelpText>
        <label>DCS/3rd Party Comm Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCS_3rd_Party_Comm_Verified_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>DCS/3rd Party Comm Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_CMF__c</fullName>
        <description>Field to include the dealership site CMF number</description>
        <inlineHelpText>For SubProject related Trip reports this field will be automatically populated upon save.  For Non-SubProject trip reports please enter the CMF for the dealership.</inlineHelpText>
        <label>Dealership CMF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Name_CMF__c</fullName>
        <description>Field indicating the Dealer name and CMF number for the report</description>
        <formula>IF(ISBLANK( Associated_SubProjectSite__r.CMF_Name__c),( Related_Account__r.Name ),(Associated_SubProjectSite__r.CMF_Name__r.Account__r.Name  &amp; &quot; / &quot; &amp; Associated_SubProjectSite__r.Ship_CMF__c))</formula>
        <inlineHelpText>This is an automated field based on the related SubProject site</inlineHelpText>
        <label>Dealership Name / CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <description>Field to display the dealership name</description>
        <formula>IF(ISBLANK( Associated_SubProjectSite__c ),( Related_Account__r.Name ), Associated_SubProjectSite__r.CMF_Name__r.Account__r.Name )</formula>
        <inlineHelpText>This is an automatic field pulling from the Account name for the associated site or account</inlineHelpText>
        <label>Dealership Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field is to denote the department for the report</description>
        <inlineHelpText>Please select a department for the trip report</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Business Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front-End Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equipment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departure_Finish_Date_Time__c</fullName>
        <description>Field to indicate when the associate completed their time at the dealership</description>
        <inlineHelpText>Please enter the date/time that you departed the dealership at the conclusion of the onsite portion of the install</inlineHelpText>
        <label>Departure (Finish) Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Verified_Complete__c</fullName>
        <description>field to indicate the percent complete for the deliverable</description>
        <inlineHelpText>please select the proper value for the deliverable</inlineHelpText>
        <label>Equipment Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Verified_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Equipment Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forms_Printers_Equipment_Verified__c</fullName>
        <description>Field used to indicate the progress percent for the deliverable</description>
        <inlineHelpText>Please select the proper percent complete</inlineHelpText>
        <label>Forms &amp; Printers Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forms_Printers_Verified_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Forms &amp; Printers Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Training_Completed_Complete__c</fullName>
        <description>Field used for indicating the percent complete for the deliverable</description>
        <inlineHelpText>please select the appropriate percent complete for the deliverable</inlineHelpText>
        <label>Manager Training Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Training_Completed_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Manager Training Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metrics_Red__c</fullName>
        <formula>IF(ISPICKVAL( Agenda_Signed_Off_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Conversion_Verified_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( DCS_3rd_Party_Comm_Verified_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Equipment_Verified_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Forms_Printers_Verified_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Manager_Training_Completed_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Setups_Verified_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( Users_Capable_of_Logging_in_Risk__c , &quot;Red&quot;), &quot;Red&quot;, 
IF(ISPICKVAL( User_Training_Completed_Risk__c , &quot;Red&quot;), &quot;Red&quot;,null 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <label>Metrics Red</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrics_Yellow__c</fullName>
        <formula>IF(ISPICKVAL( Agenda_Signed_Off_Risk__c , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL( Conversion_Verified_Risk__c , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(  DCS_3rd_Party_Comm_Verified_Risk__c  , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(   Equipment_Verified_Risk__c   , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(  Forms_Printers_Verified_Risk__c  , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(   Manager_Training_Completed_Risk__c   , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(   Setups_Verified_Risk__c   , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(  Users_Capable_of_Logging_in_Risk__c , &quot;Yellow&quot;), &quot;Yellow&quot;,
IF(ISPICKVAL(   User_Training_Completed_Risk__c  , &quot;Yellow&quot;), &quot;Yellow&quot;,null
)
)
)
)
)
)
)
)
)</formula>
        <label>Metrics Yellow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Product_Names__c</fullName>
        <description>Field to indicate what the product was when BSC selects &quot;other&quot; in the Product Installed</description>
        <inlineHelpText>Please enter a product name as you entered &quot;other&quot; in the Product Installed picklist.</inlineHelpText>
        <label>Other Product Name(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Installed__c</fullName>
        <description>Multi select field to indicate the product(s) being installed</description>
        <inlineHelpText>Please select the product for the Trip Report</inlineHelpText>
        <label>Product(s) Installed</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Lease Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting VCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Repair Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Time Clock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Time Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layered Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lot Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Company Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Departments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONE-Eighty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Delivery Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager_for_SubProject__c</fullName>
        <formula>Associated_SubProjectSite__r.SubProject__r.Project_Manager__r.FirstName &amp; &quot; &quot; &amp;  Associated_SubProjectSite__r.SubProject__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager for SubProject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Visit__c</fullName>
        <description>Field used to indicate why the associate has gone to the site</description>
        <inlineHelpText>Please select the proper reason for the dealership visit</inlineHelpText>
        <label>Reason for Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Critical Client Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Go-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Service Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Service Visit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account for the trip report</description>
        <inlineHelpText>Please enter the account name and then select the lookup icon in order to locate the proper account for the trip report.</inlineHelpText>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trip Reports</relationshipLabel>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_regarding_the_Purpose_of_the_Visit__c</fullName>
        <description>Field to indicate the risk factor in completing the purpose of your visit</description>
        <inlineHelpText>Please indicate the risk level for completing the purpose of your visit</inlineHelpText>
        <label>Risk regarding the Purpose of the Visit</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setups_Verified_Complete__c</fullName>
        <description>field to designate the percent complete of the deliverable</description>
        <inlineHelpText>Please select the proper percent complete for the deliverable</inlineHelpText>
        <label>Setups Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setups_Verified_Risk__c</fullName>
        <inlineHelpText>Once you have started work you should assign a risk color. If you denote as &quot;Red&quot; please open an Issue in the Project Log.</inlineHelpText>
        <label>Setups Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <formula>Associated_SubProjectSite__r.SubProject_Name__c</formula>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Number__c</fullName>
        <description>Field to display the SubProject Number</description>
        <formula>Associated_SubProjectSite__r.SubProject__r.Name</formula>
        <inlineHelpText>Automated field to display the SubProject Number</inlineHelpText>
        <label>SubProject Number</label>
        <type>Text</type>
    </fields>
</CustomObject>